--- a/style/loginStyle.css
+++ b/style/loginStyle.css
@@ -4,9 +4,21 @@
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	border: 1px solid black;
 }
 
-h1{
-	border-bottom: 1px solid black;
+.login h2{
+	font-size: 32px;
+	color: #111;
+	border-bottom: 2px solid #111;
+	text-align: center;
+}
+
+.login ul{
+	list-style-type: none;
+}
+
+.login a{
+/*	text-decoration: none;*/
+	color: inherit;
+
 }
