--- a/style/indexStyle.css
+++ b/style/indexStyle.css
@@ -11,26 +11,26 @@ body{
 	font-family: 'Roboto', sans-serif;
 }
 #logo {
-	width: 300px;
-	height: 300px;
+	width: 100px;
+	height: 100px;
 	margin: 0 auto;
 	background-color: #0E2577;
 }
 #logo p {
-	font-size: 50pt;
-	color: #ffffff;
-	height: 300px;
-	line-height: 300px;
+	font-size: 25px;
+	color: hsl(0, 0%, 100%);
+	height: 100px;
+	line-height: 100px;
 }
 #title {
-	font-size: 70pt;
+	font-size: 40px;
 }
 .mainlist {
-	margin-top: 250px;
+	margin-top: 100px;
 }
 .mainlist p {
-	font-size: 50pt;
-	margin-top: 50px;
+	font-size: 25px;
+	margin-top: 20px;
 }
 .mainlist a {
 	text-decoration: none;
@@ -40,8 +40,8 @@ body{
 }
 
 .version {
-	margin-top: 300px;
-	font-size: 25px;
+	margin-top: 100px;
+	font-size: 15px;
 }
 
 /*.mainpage ul li {
