--- a/style/MainHome/mainHomeStyle.css
+++ b/style/MainHome/mainHomeStyle.css
@@ -58,19 +58,52 @@ body {
  * Above part is shared part as header and background
  ****************************************************/
 
-.posts {
-  width: 330px;
-  height: 250px;
-  background-color: #ffffff;
-  margin: 20px auto;
-  padding-top: 14px;
+.toPost {
+  text-decoration: none;
+  color: #000000;
 }
 
-.postsImage {
+.toPostedBy {
+  text-decoration: none;
+  color: #000000;
+}
+
+.post {
+  width: 330px;
+  height: auto;
+  background-color: #ffffff;
+  margin: 20px auto;
+  padding: 14px 0;
+  /* border-radius: 7px; */
+}
+
+.postTitle {
+  margin: 0px 14px;
+  font-size: 18px;
+}
+
+.postImage {
   width: 300px;
   height: 170px;
   border: 1px solid black;
-  margin: 0px auto;
+  margin: 7px auto;
+}
+
+.postDetail {
+  margin: 0px 14px;
+}
+
+.postId {
+  display: flex;
+  margin-bottom: 7px;
+}
+
+.postedBy {
+  font-weight: 700;
+}
+
+.postedDate {
+  margin-left: auto;
 }
 
 /** (mobile) For 480px or less **/
