--- a/style/Post/post.css
+++ b/style/Post/post.css
@@ -60,8 +60,11 @@ body {
 
 #postMain {
   width: 345px;
+  height: auto;
+  padding: 14px;
   margin: 0 auto;
-  border: 1px solid black;
+  background-color: white;
+  /* border: 1px solid black; */
 }
 
 #postTitle {
@@ -70,6 +73,9 @@ body {
 
 .postId {
   display: flex;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #postTime {
@@ -81,9 +87,25 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 15px;
+}
+
+#postDetail {
+  margin-top: 15px;
+  margin-left: 10px;
+}
+
+.conditionBar {
+  margin-top: 15px;
 }
 
 .conditionBar { 
   text-align: center;
+}
+
+#directMessage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
