--- a/style/Post/postFormStyle.css
+++ b/style/Post/postFormStyle.css
@@ -13,7 +13,18 @@
     width: 100%;
     height: 80px;
     z-index: 20001;
+    margin-bottom: 15px;
+    position: flex;
   }
+
+#cancelButton{
+    /* text-decoration: none; */
+    color: black;
+    font-size: 25px;
+    margin: 15px;
+    margin-top: 20px;
+    position: absolute;
+}
 
 .postForm{
     margin-top: 80px;
@@ -86,5 +97,32 @@
 }
 
 
+#submit{
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block;
+    width: 100px;
+    margin: 25px auto;
+}
 
+#title, #image, #description, #con{
+    width: 90%;
+    display: block;
+    margin: 15px auto;
+}
 
+#condition{
+    width: 100%;
+    display: block;
+    margin: 5px auto;
+}
+
+#title{
+    margin-top: 100px;
+}
