--- a/style/MainHome/mainHomeStyle.css
+++ b/style/MainHome/mainHomeStyle.css
@@ -84,9 +84,14 @@ body {
 
 .postImage {
   width: 300px;
-  height: 170px;
-  border: 1px solid black;
+  /* height: 170px; */
+  /* border: 1px solid black; */
   margin: 7px auto;
+}
+
+.postImage img {
+  width: 300px;
+  height: 170px;
 }
 
 .postDetail {
