--- a/style/Post/postFormStyle.css
+++ b/style/Post/postFormStyle.css
@@ -61,6 +61,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #fff;
+    height: 80px;
 }
 
 #rangeValue{
@@ -125,4 +126,10 @@
 
 #title{
     margin-top: 100px;
+}
+
+#conText{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
