--- a/style/Post/post.css
+++ b/style/Post/post.css
@@ -88,7 +88,7 @@ body {
   margin-bottom: 10px;
 }
 
-.postImage {
+#postImage {
   width: 335px;
   display: block;
   margin-left: auto;
@@ -99,6 +99,11 @@ body {
 #postDetail {
   margin-top: 15px;
   margin-left: 10px;
+  margin-right: 10px;
+}
+
+#postContent {
+  word-wrap: break-word;
 }
 
 .conditionBar {
@@ -113,5 +118,15 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 15px;
+  background-color: #008CBA;
+  border: 1px solid #008CBA;
+  border-radius: 10px;
+  color: white;
+  padding: 10px 17px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
 }
-
