--- a/style/Post/postFormStyle.css
+++ b/style/Post/postFormStyle.css
@@ -1,21 +1,21 @@
 /****************************************************
  * Following part is shared part as header and background
  ****************************************************/
- body {
-    margin: 0;
-    background-color: rgb(189, 204, 255);
-  }
-  
-  #header {
-    position: fixed;
-    top: 0;
-    background-color: #ffffff;
-    width: 100%;
-    height: 80px;
-    z-index: 20001;
-    margin-bottom: 15px;
-    position: flex;
-  }
+body {
+margin: 0;
+background-color: rgb(189, 204, 255);
+}
+
+#header {
+position: fixed;
+top: 0;
+background-color: #ffffff;
+width: 100%;
+height: 80px;
+z-index: 20001;
+margin-bottom: 15px;
+position: flex;
+}
 
 #cancelButton{
     /* text-decoration: none; */
@@ -39,6 +39,11 @@
     border-radius: 4px;
     border: 1px solid #ccc;
 }
+
+#imageText {
+    margin-left: 5%;
+}
+
 .description{
     box-sizing: border-box;
     margin-top: 15px;
@@ -67,7 +72,9 @@
 #rangeValue{
     background-color: #fff;
     width: 40px;
-    text-align: center;
+    /* text-align: center; */
+    display: block;
+    margin: 0 auto;
 }
 
 .range{
@@ -132,4 +139,6 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    margin-top: 7px;
+    margin-bottom: 7px;
 }
