--- a/style/MainHome/mainHomeStyle.css
+++ b/style/MainHome/mainHomeStyle.css
@@ -74,6 +74,7 @@ body {
   background-color: #ffffff;
   margin: 20px auto;
   padding: 14px 0;
+  border-radius: 5px;
   /* border-radius: 7px; */
 }
 
