--- a/style/MainHome/mainHomeStyle.css
+++ b/style/MainHome/mainHomeStyle.css
@@ -3,7 +3,7 @@
  ****************************************************/
 body {
   margin: 0;
-  background-color: rgb(189, 204, 255);
+  background-color: #bdccff;
 }
 
 #header {
@@ -30,23 +30,20 @@ body {
   float: left;
 }
 
-#searchIcon {
-  float: right;
-}
-
-#messageIcon {
-  float: right;
+#logoWrap {
+  color: #ffa600;
 }
 
 #logo {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #0E2577;
   display: inline-block;
   left: 50%;
-  transform: translate(150%);
-  margin: 20px
+  right: 50%;
+  margin: 23px;
+  font-size: 30px;
+}
+
+#logoText {
+  font-family: 'Bebas Neue', cursive;
 }
 
 #main {
