--- a/public/style/Post/postFormStyle.css
+++ b/public/style/Post/postFormStyle.css
@@ -24,6 +24,7 @@ body {
   margin: 15px;
   margin-top: 20px;
   position: absolute;
+  font-family: 'Muli', sans-serif;
 }
 
 .postForm {
@@ -39,10 +40,12 @@ body {
   font-size: 20px;
   border-radius: 4px;
   border: 1px solid #ccc;
+  font-family: 'Muli', sans-serif;
 }
 
 #imageText {
   margin-left: 5%;
+  font-family: 'Muli', sans-serif;
 }
 
 .description {
@@ -53,6 +56,7 @@ body {
   font-size: 15px;
   border-radius: 4px;
   border: 1px solid #ccc;
+  font-family: 'Muli', sans-serif;
 }
 
 
@@ -68,6 +72,7 @@ body {
   border-radius: 4px;
   background-color: #fff;
   height: 105px;
+  font-family: 'Muli', sans-serif;
 }
 
 #rangeValue {
@@ -76,6 +81,7 @@ body {
   /* text-align: center; */
   display: block;
   margin: 0 auto;
+  font-family: 'Muli', sans-serif;
 }
 
 .range {
@@ -86,7 +92,7 @@ body {
   outline: none;
   border-radius: 2px;
   left: 50%;
-
+  font-family: 'Muli', sans-serif;
 }
 
 .range::-webkit-slider-thumb {
@@ -120,6 +126,7 @@ body {
   width: 100px;
   margin: 25px auto;
   text-align: center;
+  font-family: 'Muli', sans-serif;
 }
 
 #title,
@@ -129,6 +136,7 @@ body {
   width: 90%;
   display: block;
   margin: 15px auto;
+  font-family: 'Muli', sans-serif;
 }
 
 #condition {
@@ -143,11 +151,7 @@ body {
 
 #conText {
   text-align: center;
-  /* position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 7px;
-    margin-bottom: 7px; */
+  font-family: 'Muli', sans-serif;
 }
 
 .check {
@@ -163,6 +167,10 @@ body {
 
 .form-check {
   display: inline-block;
+}
+
+.form-check-label {
+  font-family: 'Muli', sans-serif;
 }
 
 #right {
